Fix header/nav on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,7 +114,7 @@ main {
 
     header {
         text-align: center;
-        height: 100px;
+        height: fit-content;
         padding-left: 10px;
         padding-right: 10px;
         padding-top: 40px;
